# pymk

./: .gitignore  README.md  build.py  mk.py  pyproject.toml
.githooks/: pre-commit
.github/workflows/: lint-and-tests.yml
pymk/: __init__.py  internal.py
src/: __init__.py  internal.py  module.py
tests/: test_main.py
