[project]
name = 'pymk'
version = '0.0.1'
authors = [{ name='Axel Lindeberg' }]
description = 'A make-style build system as a Python library'
readme = 'README.md'
requires-python = '>=3.10'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]

[build-system]
requires = ['setuptools>=68.3']
build-backend = 'setuptools.build_meta'

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ['E', 'W', 'F', 'B', 'I', 'UP']
ignore = [
    'UP035', # deprecated-import
]

[tool.ruff.format]
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = ['.']
testpaths = ['tests']
